--- a/Web/index.html
+++ b/Web/index.html
@@ -1,14 +1,16 @@
-<!-- Apresentação do sistema + botão para login ou cadastro-->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Bem-vindo ao Projeto</title>
+  <title>Marombas Guarani</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <h1>Bem-vindo ao Marombas Guaraní</h1>
-  <h3>Onde o seu esforço é recompensado!</h3>
-  <a href="login.php">Entrar</a> | <a href="cadastro.php">Cadastrar</a>
+  <h1>Treine conosco, treine com os</h1>
+  <img src="assets/img/maromba.png" alt="Logo Maromba" class="logo">
+  <h1>MAROMBAS GUARANÍ</h1>
+  <a href="login.php">Entrar</a>
+  <a href="cadastro.php">Cadastrar</a>
 </body>
 </html>
+
